# pit-panel

./: .cleanup_msg.txt  .gitignore  AGENTS.md  README.md  alembic.ini  backend_returns.py  backend_returns_fix.py  benchmark_blocklist.py  check_htmx.out  check_htmx.py  check_htmx_render.py  check_responses.py  compare_routes.py  compare_routes2.py  detailed_check.py  fix_html.py  fix_ops_env.py  fix_security.py  fix_security_lynis.py  fix_sudo_call_sites.py  format_system.py  get_db_info_docker.py  htmx_analysis.txt  mypy5.txt  parse_yaml.py  patch_auth_return.py  patch_bug_analyzer.py  patch_bug_analyzer2.py  patch_security.py  patch_system_mypy.py  patch_test.py  plan.md  pr_body.md  pr_body.txt  pr_description.md  pyproject.toml  returns_analysis.txt  scratch.py  scratch2.py  scratch_osv.py  (+11 more)
.Jules/: palette.md
.beads/: issues.jsonl  metadata.json
.github/workflows/: test.yml
.jules/: bolt.md  daily-mypy.md  palette.md  sentinel.md
.serena/: project.yml
alembic/: env.py
alembic/versions/: eed3ced4d83f_initial_migration.py
docker/caddy/: Caddyfile.tpl
docs/plans/: 2026-06-27-smart-repo-detector.md  debian-system-management.md
openspec/: README.md  config.yaml
packaging/: install.sh  pit-panel-updater.service  pit-panel-updater.timer  pit-panel.service
scripts/: uninstall.sh  upgrade.sh
src/pit_panel/: __main__.py  config.py  main.py
templates-app/adminer/: docker-compose.yml.tpl  meta.json
templates-app/calibre-web/: docker-compose.yml.tpl  meta.json
templates-app/code-server/: docker-compose.yml.tpl  env.tpl  meta.json
templates-app/custom-compose/: README.tpl  meta.json
templates-app/directus/: docker-compose.yml.tpl  meta.json
templates-app/ghost/: docker-compose.yml.tpl  env.tpl  meta.json
templates-app/gitea/: docker-compose.yml.tpl  meta.json
templates-app/json-crack/: meta.json  (+1 more)
tests/: conftest.py
(+242 files in other folders)
